--- a/RMarkdown_leaflet.rmd
+++ b/RMarkdown_leaflet.rmd
@@ -17,6 +17,11 @@ Host your webpage on either GitHub Pages, RPubs, or NeoCities.
 
 Your webpage must contain the date that you created the document, and it must contain a map created with Leaflet. We would love to see you show off your creativity!
 
+```{r}
+date()
+```
+
+
 ```{r, echo=TRUE}
 library (leaflet)
 my_map <- leaflet () %>% 
